Fixing alignment

--- a/style.css
+++ b/style.css
@@ -81,6 +81,12 @@ nav {
     text-align:justify  ;
     max-width: 1300px
    }
+#Aboutme img {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 50%;
+}
 
 
 #mywork {
